fixes image border colour in dark mode

--- a/dark.css
+++ b/dark.css
@@ -249,7 +249,7 @@ em {
 img.project-image {
     width: 40vh;
     height: 40vh;
-    border: 5px solid #041f4a;
+    border: 5px solid #f1e9da;
     border-radius: 20px;
     padding: 2%;
 }
